@@ -1,3 +1,4 @@
+    - escape html entities in html_options (Monte)
     - fixed bug with label for html_options (Monte)
     - added caching to config file loading (Monte)
     - added "extra" parameter to mailto function (Monte,
